--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 .navbar {
     content: "";
-    display: table;
+    display: flex;
     clear: both;
     width: 100%;
-    height: 35%;
+    height: 5%;
     border-color: #762bf0;
     background-color:#373737;
     margin-bottom: 10px;
@@ -108,8 +108,7 @@
 }
 
 .loading-icon{
-    position: absolute;
-    left: 23%;
+    display: inline-block;
 }
 
 .not-found{
@@ -175,7 +174,7 @@
 
 .player {
     width: 100%;
-    height: 100%;
+    aspect-ratio: 16/9;
 }
 
 .series-selector {
@@ -255,11 +254,7 @@
 .media-type{
     font-family: 'Arial', sans-serif;
     color:#9f5af8;
-    font-size: 35px;
-    text-align: center; 
     letter-spacing: 2px;
-    position: relative;
-    float: right;
     text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
 }
 
@@ -290,25 +285,26 @@
     content: "";
     display: table;
     clear: both;
-    width: 98.8%;
-    height: 5%;
+    width: calc(100% - 20px);;
+    height: 35%;
     border-color: #762bf0;
+    background-color:#373737;
     background-color:#282828;
-    margin: 10px;
     border-radius: 5px;
-    position: absolute;
     color: whitesmoke;
-    bottom: 0;
+    margin: 10px;
+    margin-top: 200px;
 }
 
 .items {
+    content: "";
     display: table;
-    width: 97.7%;
+    clear: both;
+    width: 100%;
     height: 270%;
     border-color: #762bf0;
     background-color:#373737;
-    position: absolute;
-    bottom: 100;
+    margin-bottom: 10px;
     
 }
 
@@ -316,20 +312,21 @@
     float: right;
     background-color: #282828;
     margin: 10px 10px 10px 10px;
-    width: 23%;
-    height: 91%;
+    width: calc(25% - 20px);
+    height: calc(100% - 20px);
     border-radius: 5px;
-    margin-bottom: 10px;
+    margin: 10px;
 }
 
 .cards {
     float: left;
     margin: 10px;
     background-color: #282828;
-    width: 73%;
-    height: 91%;
+    width: calc(75% - 20px);
+    height: calc(100% - 20px);
     border-radius: 5px;
     display: block;
+    text-align: center;
 }
 
 .row {
@@ -376,11 +373,11 @@ select {
   }
   .card {
     float: left;
-    width: 20%;
-    height: 80%;
+    width: calc(25% - 20px);
+    aspect-ratio: 2/3;
     background-color: #4907b4;
     border-radius: 10px;
-    margin: 4% 2.5%;
+    margin: 10px;
     position: relative;
     color: #ffffff;
     transition: background-color 1.3s ease, transform 0.7s ease;
@@ -427,16 +424,22 @@ select {
 
 .search-conatiner {
     float: right;
-    padding: 10px;
+    background-color: #282828;
+    margin: 10px 10px 10px 10px;
+    width: calc(27% - 20px);
+    height: calc(100% - 20px);
+    border-radius: 5px;
+    margin: 10px;
+    display: flex;
 }
 
 .search-bar {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding: 10px;
     color:#282828;
     background-color: #c3b1e0;
-    width: 220px;
-    height: 40px;
+    margin: 10px 10px 10px 5px;
+    width: calc(76% - 10px);
+    min-height: calc(100%);
     border-radius: 10px;
     border-color: #282828;
     border-width: 0px;
@@ -448,8 +451,9 @@ select {
     color:#eeeeee;
     cursor: pointer;
     background-color: #4907b4;
-    width: 75px;
-    height: 43px;
+    width: calc(33% - 10px);
+    min-height: calc(100% - 20px);
+    margin: 10px 5px 10px 10px;
     border-radius: 10px;
     border-color: #282828;
     border-width: 0px;
@@ -538,8 +542,10 @@ cursor: wait;
     color:#eeeeee;
     cursor: pointer;
     background-color: #4907b4;
-    width: 120px;
-    height: 40px;
+    width: calc(12.5% - 20px);
+    min-height: calc(100% - 30px);
+    float: left;
+    margin: 15px 10px;
     border-radius: 10px;
     border-color: #282828;
     border-width: 0px;
@@ -561,35 +567,41 @@ cursor: wait;
 }
 
 .icon {
-    height: 40px;
-    width: auto;
+    width: calc(5% - 20px);
+    height: calc(100% - 20px);
     float: left;
+    margin: 10px;
+}
+
+.button-icon{
+    width: calc(15% - 10px);
+    height: calc(100% - 10px);
     margin: 5px;
 }
 
 .navtitle {
     font-family: 'Arial', sans-serif;
     color: #762bf0;
-    font-size: 55px;
-    text-align: center; 
     text-transform: uppercase;
     letter-spacing: 3px;
-    position: relative;
-    margin-left: 100px;
-    bottom: 30px;
+    height: 100%;
+    margin: 10px;
+    font-size: 50px;
+    overflow: hidden;
     text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
 }
 
 .title-container {
-    float: left;
     display: flex;
-    height: 50px;
-    width: 760px;
+    float: left;
+    width: calc(40%);
+    padding: 0px 5% 0px 5%;
+    height: calc(100%);
+    text-align: center;
 }
 
 body {
     background-color: #121212;
-    padding: 10px;
 }
 
 .image-container {
