--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,13 @@
 .navbar {
     content: "";
     display: flex;
+    overflow: hidden;
     clear: both;
-    width: 100%;
-    height: 5%;
+    width: calc(100% - 20px);
+    min-height: calc(10% - 20px);
     border-color: #762bf0;
     background-color:#373737;
-    margin-bottom: 10px;
+    margin: 10px;
 }
 
 .rating {
@@ -136,39 +137,20 @@
     background-color: #575757;
     border-radius: 10px;
     text-align: center;
-    margin: 3%;
-    width: 94%;
-    height: 25%;
-}
-
-.message-content{
-    background-color: #4907b4;
-    color:#282828;
-    border-radius: 5px;
-    margin: 3%;
-    width: 94%;
-    height: 82%;
-}
-
-.message-content p{
-    margin: 5px;
-    color: whitesmoke;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: larger;
+    margin: 10px;
+    width: calc(100% - 20px);
+    height: calc(60% - 20px);
 }
 
 .player-buttons {
     content: "";
     display: table;
     clear: both;
-    width: 48%;
-    height: 4%;
+    width: calc(100% - 20px);
+    height: calc(5% - 20px);
     align-items: center;
     border-radius: 10px;
-    margin-left: 16%;
-    margin-top: 2%;
-    padding-left: 10%;
-    padding-right: 10%;
+    margin: 10px;
     background-color:#121212;
 }
 
@@ -178,9 +160,9 @@
 }
 
 .series-selector {
-    height: 80px;
-    width: 93%;
-    margin: 0% 2.5% 0% 2.5% ;
+    height: calc(100% - 20px);
+    width: calc(100% - 20px);
+    margin: 10px;
     background-color:#575757;
     border-radius: 10px;
 }
@@ -189,25 +171,19 @@
     font-family: 'Arial', sans-serif;
     color:#9f5af8;
     text-shadow: -2px -2px 0 #000, 2px -2px 0 #000, -2px 2px 0 #000, 2px 2px 0 #000;
-    font-size: 29px;
-    margin: 5px;
-}
-
-.message-content h2, h3{
-    font-family: 'Arial', sans-serif;
-    color: whitesmoke;
-    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-    letter-spacing: 1px;
+    width: calc(100% - 20px);
+    height: calc(10% - 20px);
     margin: 10px;
 }
 
 .message-item {
     position: absolute;
+    width: 100%;
+    height: 100%;
     left: 0;
     right: 0;
     opacity: 0;
     transition: opacity 0.5s, transform 0.5s;
-    margin: 5px
 }
 
 .slide-in {
@@ -221,14 +197,16 @@
 .system-message-data-container {
     position: relative;
     border-radius: 10px;
-    width: calc(100%-10px);;
-    height: 78%;
+    min-width: calc(100%-20px);
+    height: calc(75% - 20px);
     margin: 10px;
     background-color: #c3b1e0;
     overflow: hidden;
 }
 
 .system-message-navbar {
+    width: calc(100% -20px);
+    height: calc(15% - 20px);
     background-color: #282828;
     border-radius: 10px;
     display: flex;
@@ -285,43 +263,38 @@
     content: "";
     display: table;
     clear: both;
-    width: calc(100% - 20px);;
-    height: 35%;
-    border-color: #762bf0;
+    width: calc(100% - 20px);
+    height: calc(10% - 20px);
     background-color:#373737;
-    background-color:#282828;
-    border-radius: 5px;
     color: whitesmoke;
     margin: 10px;
-    margin-top: 200px;
 }
 
 .items {
     content: "";
     display: table;
     clear: both;
-    width: 100%;
-    height: 270%;
+    width: calc(100% - 20px);
+    height: 100%;
     border-color: #762bf0;
     background-color:#373737;
-    margin-bottom: 10px;
+    margin: 10px;
     
 }
 
 .item-list {
     float: right;
     background-color: #282828;
-    margin: 10px 10px 10px 10px;
-    width: calc(25% - 20px);
-    height: calc(100% - 20px);
-    border-radius: 5px;
     margin: 10px;
+    width: calc(25% - 20px);
+    min-height: calc(100% - 20px);
+    border-radius: 5px;
 }
 
 .cards {
     float: left;
-    margin: 10px;
     background-color: #282828;
+    margin: 10px;
     width: calc(75% - 20px);
     height: calc(100% - 20px);
     border-radius: 5px;
@@ -335,17 +308,16 @@
     
 }
 
-/* Style the select element with the .selector class */
 select {
-    width: 450px; /* Adjust the width as needed */
-    margin: 20px;
-    padding: 10px;
+    width: calc(50% - 20px); 
+    height: calc(100% - 20px);
+    margin: 10px;
     font-size: 16px;
+    overflow: hidden;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color:#762bf0;
     cursor: pointer;
-    appearance: none; /* Remove default arrow icon in some browsers */
   }
   
   /* Style the dropdown arrow icon (if not removed) */
@@ -450,6 +422,7 @@ select {
 .search-button, .modal button[type="submit"]{
     color:#eeeeee;
     cursor: pointer;
+    overflow: hidden;
     background-color: #4907b4;
     width: calc(33% - 10px);
     min-height: calc(100% - 20px);
@@ -513,11 +486,11 @@ select {
     align-items: center;
     justify-content: left;
     display:flex;
+    overflow: hidden;
     cursor: pointer;
     background-color: #4907b4;
-    width: 96%;
-    margin: 2%;
-    height: 40px;
+    width: calc(100% - 20px);
+    margin: 10px;
     border-radius: 10px;
     border-color: #282828;
     border-width: 0px;
@@ -541,6 +514,7 @@ cursor: wait;
 .navbutton {
     color:#eeeeee;
     cursor: pointer;
+    overflow: hidden;
     background-color: #4907b4;
     width: calc(12.5% - 20px);
     min-height: calc(100% - 30px);
@@ -571,6 +545,7 @@ cursor: wait;
     height: calc(100% - 20px);
     float: left;
     margin: 10px;
+    cursor: pointer;
 }
 
 .button-icon{
@@ -600,8 +575,15 @@ cursor: wait;
     text-align: center;
 }
 
+html {
+    height: 100%;
+    width: 100%;
+}
+
 body {
     background-color: #121212;
+    height: 100%;
+    width: calc(100% - 20px);
 }
 
 .image-container {
